--- a/SVM.ipynb
+++ b/SVM.ipynb
@@ -12,8 +12,9 @@
         "\n",
         "import csv\n",
         "import numpy as np\n",
-        "\n",
-        "from sklearn.model_selection import train_test_split\n"
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn import svm\n",
+        "import pickle"
       ]
     },
     {
@@ -27,7 +28,7 @@
         "#データの読み込み\n",
         "data = []\n",
         "\n",
-        "filename = './data/ColorList.csv'\n",
+        "filename = '/content/drive/MyDrive/アルバイト/PreApp/Asset/ColorList.csv'\n",
         "with open(filename, encoding='utf8', newline='') as f:\n",
         "    csvreader = csv.reader(f)\n",
         "    for row in csvreader:\n",
@@ -46,6 +47,7 @@
         "\n",
         "data.pop(0)\n",
         "data = [*map(lambda row: list(map(lambda x: int(x), row)), data)]\n",
+        "data.append([255,0,0,255,242,0,0])\n",
         "\n",
         "data_x = np.array([*map(lambda x: x[:6], data)])\n",
         "data_y = np.array([*map(lambda x: x[6], data)])\n"
@@ -85,21 +87,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8-WFiGRI8aec",
-        "outputId": "d25c6de7-d890-4a2b-c67e-0e70964ee036"
+        "outputId": "7c6e51ef-9946-41c1-f89e-232b58d4dfc8"
       },
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "0.9082969432314411\n"
+            "0.868421052631579\n"
           ]
         }
       ],
       "source": [
-        "#SVM\n",
+        "#SVMによる学習・評価\n",
         "\n",
-        "from sklearn import svm\n",
         "clf = svm.SVC()\n",
         "\n",
         "clf.fit(X_train, y_train)\n",
@@ -110,13 +111,12 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "poFrui-Em9tL"
+        "id": "wMpisKq6nB0h"
       },
       "outputs": [],
       "source": [
         "#モデルの保存\n",
         "\n",
-        "import pickle\n",
         "filename = 'model.sav'\n",
         "pickle.dump(clf, open(filename, 'wb'))"
       ]
